<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pending"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-52dp"
        tools:layout_editor_absoluteY="-343dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/shape_top"
                android:backgroundTint="@color/primary_two">

                <RelativeLayout
                    android:id="@+id/kodeToko"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_kode"
                    android:elevation="2dp"
                    android:padding="15dp"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kode_toko_120199862"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape_notif">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/notification" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/tokoSumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/kodeToko"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/text_toko_sumber_jaya"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tokoSumber"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_sales_theo_adipta"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_notif"
                android:elevation="3dp">

                <TextView
                    android:id="@+id/purchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_purchase_order_po"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/pending"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/purchase"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/pending"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pending" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_nominal"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/proses"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/purchase"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/proses"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_dalam_proses" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_61"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pending"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_total_tagihan"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rp_29_000_000"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bayar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/proses"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape_bayar"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/send" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/text_bayar"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ivAjukan"
                android:layout_width="100dp"
                android:layout_height="105dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_icons"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/shape_icons_two">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/notes" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/text_ajukan_npo"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ivRiwayat"
                android:layout_width="100dp"
                android:layout_height="105dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_icons_three"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/shape_icons_two">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/notes" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/text_riwayat_npo"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="105dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_icons_three"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/shape_icons_two">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/notes" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/text_riwayat_nbayar"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="105dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_icons_three"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/shape_icons_two">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/notes" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/text_riwayat_npesanan"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="105dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_icons_three"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/shape_icons_two">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:contentDescription="@string/text_todo"
                        android:src="@drawable/notes" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/text_daftar_nbayar"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/botNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:menu="@menu/bottom_nav_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/text_todo"
            android:src="@drawable/home"
            app:borderWidth="0dp"
            app:layout_anchor="@id/botNav"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>